# fedtools

./: .gitignore  README.md  fedtools.conf  fedtools.toml  pyproject.toml
conf/: fedtools.bash
example/: chain-build.toml
rpm/: fedtools.spec
src/fedtools/: build_srpm.py  check_upstream_versions.py  config.py  copr_chain_build.py  copr_review.py  fedorapeople.py  fedtools.py  post_rust_review.py  review.py  utils.py
