[project]
name = "fedtools"
version = "0.1.0"
authors = [
  { name="blinxen", email="h-k-81@hotmail.com" },
]
description = "Python scripts that make the life of a fedora packager easier"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests"
]

[project.scripts]
fedtools = "fedtools.fedtools:main"

[project.urls]
"Homepage" = "https://github.com/blinxen/fedtools"
"Bug Tracker" = "https://github.com/blinxen/fedtools/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
