[tool.poetry]
name = "fedtools"
version = "0.3.0"
description = "Python scripts that make the life of a fedora packager easier"
readme = "README.md"
authors = ["blinxen <h-k-81@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
tabulate = "^0.9.0"

[tool.poetry.scripts]
fedtools = "fedtools.fedtools:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
