[tool.poetry]
name = "fedtools"
version = "0.9.2"
description = "Python scripts that make the life of a fedora packager (or maybe just mine) easier"
readme = "README.md"
authors = ["blinxen <h-k-81@hotmail.com>"]
license = "MIT"
exclude = ["conf/"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"
tabulate = "*"
argcomplete = "*"

[tool.poetry.scripts]
fedtools = "fedtools.fedtools:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
